[gd_scene load_steps=6 format=3 uid="uid://77uduomktru6"]

[ext_resource type="Script" path="res://scripts/connectPanel.gd" id="1_781yd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rnlb7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_kinhr"]
sky_material = SubResource("ProceduralSkyMaterial_rnlb7")

[sub_resource type="Environment" id="Environment_v885m"]
background_mode = 2
sky = SubResource("Sky_kinhr")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s5wk0"]
albedo_color = Color(0.27451, 0.470588, 0.333333, 1)

[node name="Map1" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v885m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
size = Vector3(15, 1, 15)
material = SubResource("StandardMaterial3D_s5wk0")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="connectPanel" type="Panel" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -136.0
offset_right = 153.5
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_781yd")

[node name="hostButton" type="Button" parent="CanvasLayer/ui/connectPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 21.0
offset_right = -16.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
text = "Server"

[node name="serverButton" type="Button" parent="CanvasLayer/ui/connectPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 21.0
offset_right = 105.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
text = "Client"

[node name="addressLine" type="LineEdit" parent="CanvasLayer/ui/connectPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -73.0
offset_right = 104.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
text = "localhost"
placeholder_text = "address"

[node name="portLine" type="LineEdit" parent="CanvasLayer/ui/connectPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -28.0
offset_right = 104.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "9999"
placeholder_text = "port"

[connection signal="pressed" from="CanvasLayer/ui/connectPanel/hostButton" to="CanvasLayer/ui/connectPanel" method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ui/connectPanel/serverButton" to="CanvasLayer/ui/connectPanel" method="_on_server_button_pressed"]
